--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,105 +23,62 @@
             android:layout_marginStart="40dp"
             android:layout_marginEnd="40dp"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/til_username"
             android:layout_below="@+id/iv_icon"
-            android:layout_marginTop="10dp"
-            android:id="@+id/ll_email">
-
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/ic_email_black_24dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginStart="20dp"
-                />
-
-            <TextView
-                android:id="@+id/tv_username"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="E-mail"
-                android:textStyle="bold"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginTop="24dp"
-                android:textSize="20sp"
-                android:textColor="@color/colorText"
-                />
-        </LinearLayout>
-
-        <EditText
-            android:id="@+id/et_username"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/ll_email"
-            android:singleLine="true"
-            android:textSize="20sp"
-            android:inputType="textPersonName"
-            android:padding="6dp"
-            android:textColor="@color/colorText"
-            android:backgroundTint="@color/colorTextBold"
-            android:layout_marginBottom="10dp"
-            />
+            android:layout_marginTop="20dp"
+            android:hint="E-mail"
+            app:startIconDrawable="@drawable/ic_email_black_24dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/et_username"
-            android:id="@+id/ll_parola">
-
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/ic_security_black_24dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginStart="20dp"
-                />
-
-            <TextView
-                android:id="@+id/tv_password"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_width="wrap_content"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_username"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Parolă"
-                android:textStyle="bold"
-                android:layout_below="@+id/et_username"
-                android:layout_marginTop="24dp"
-                android:textSize="20sp"
-                android:textColor="@color/colorText"
+                android:layout_marginTop="10dp"
+                android:imeOptions="actionNext"
+                android:inputType="textEmailAddress"
                 />
-        </LinearLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <EditText
-            android:id="@+id/et_password"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/til_password"
+            android:layout_below="@+id/til_username"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:layout_marginTop="6dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/ll_parola"
-            android:singleLine="true"
-            android:textSize="20sp"
-            android:inputType="textPassword"
-            android:padding="6dp"
-            android:textColor="@color/colorText"
-            android:backgroundTint="@color/colorTextBold"
-            android:layout_marginBottom="10dp"
-            />
+            android:hint="Parolă"
+            app:startIconDrawable="@drawable/ic_security_black_24dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:imeOptions="actionDone"
+                android:inputType="textPassword"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+
 
         <Button
         android:id="@+id/btn_signin"
         android:layout_marginStart="90dp"
         android:layout_marginEnd="90dp"
         android:padding="6dp"
-        android:layout_width="230dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/et_password"
-        android:layout_marginTop="32dp"
+            android:layout_width="230dp"
+            android:layout_height="50dp"
+            android:layout_centerInParent="true"
+            android:textAlignment="center"
+        android:layout_below="@+id/til_password"
+        android:layout_marginTop="40dp"
         android:textSize="20sp"
         android:text="Autentificare"
         android:textAllCaps="false"
@@ -136,15 +93,18 @@
             android:layout_marginEnd="90dp"
             android:padding="6dp"
             android:layout_width="230dp"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
+            android:layout_centerInParent="true"
+            android:textAlignment="center"
             android:layout_below="@+id/btn_signin"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="20dp"
             android:textSize="20sp"
             android:text="Înregistrare"
             android:textAllCaps="false"
             android:textColor="@color/colorTextButton"
             android:background="@drawable/border_blue"
             android:onClick="onSignUp"
+            style="?attr/materialButtonOutlinedStyle"
             />
 
     </RelativeLayout>
