--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -13,192 +13,162 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/tv_email"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="E-mail"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/til_email"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginTop="20dp"
-            android:textStyle="bold"
-            android:textSize="16sp"
-            android:textColor="@color/colorText"
-            />
+            android:hint="E-mail"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-        <EditText
-            android:id="@+id/et_email"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:imeOptions="actionNext"
+                android:inputType="textEmailAddress"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/til_nume"
+            android:layout_below="@+id/til_email"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_email"
-            android:singleLine="true"
-            android:textSize="20sp"
-            android:padding="6dp"
-            android:inputType="textEmailAddress"
-            android:textColor="@color/colorText"
-            android:backgroundTint="@color/colorTextBold"
-            android:layout_marginBottom="10dp"
-            />
-
-        <TextView
-            android:id="@+id/tv_nume"
-            android:layout_below="@+id/et_email"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Nume"
-            android:textStyle="bold"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
+            android:layout_height="56dp"
             android:layout_marginTop="6dp"
-            android:textSize="16sp"
-            android:textColor="@color/colorText"
-            />
-
-        <EditText
-            android:id="@+id/et_nume"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
+            android:hint="Nume"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_nume"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:imeOptions="actionNext"
+                android:inputType="textPersonName"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/til_prenume"
+            android:layout_below="@+id/til_nume"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_nume"
-            android:singleLine="true"
-            android:textSize="20sp"
-            android:inputType="textCapWords"
-            android:padding="6dp"
-            android:textColor="@color/colorText"
-            android:backgroundTint="@color/colorTextBold"
-            android:layout_marginBottom="10dp"
-            />
-
-        <TextView
-            android:id="@+id/tv_prenume"
-            android:layout_below="@+id/et_nume"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Prenume"
-            android:textStyle="bold"
+            android:layout_height="56dp"
+            android:layout_marginTop="10dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginTop="6dp"
-            android:textSize="16sp"
-            android:textColor="@color/colorText"
-            />
+            android:hint="Prenume"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-        <EditText
-            android:id="@+id/et_prenume"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_prenume"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:imeOptions="actionNext"
+                android:inputType="textPersonName"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/til_matricol"
+            android:layout_below="@+id/til_prenume"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_prenume"
-            android:singleLine="true"
-            android:textSize="20sp"
-            android:inputType="textCapWords"
-            android:padding="6dp"
-            android:textColor="@color/colorText"
-            android:backgroundTint="@color/colorTextBold"
-            android:layout_marginBottom="10dp"
-            />
-
-        <TextView
-            android:id="@+id/tv_matricol"
-            android:layout_below="@+id/et_prenume"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Număr matricol"
-            android:textStyle="bold"
+            android:layout_height="56dp"
+            android:layout_marginTop="10dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginTop="6dp"
-            android:textSize="16sp"
-            android:textColor="@color/colorText"
-            />
+            android:hint="Număr matricol"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-        <EditText
-            android:id="@+id/et_matricol"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_matricol"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:imeOptions="actionNext"
+                android:inputType="text"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/til_telefon"
+            android:layout_below="@+id/til_matricol"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_matricol"
-            android:singleLine="true"
-            android:textSize="20sp"
-            android:padding="6dp"
-            android:textColor="@color/colorText"
-            android:backgroundTint="@color/colorTextBold"
-            android:layout_marginBottom="10dp"
-            />
-
-        <TextView
-            android:id="@+id/tv_telefon"
-            android:layout_below="@+id/et_matricol"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Telefon"
-            android:textStyle="bold"
+            android:layout_height="56dp"
+            android:layout_marginTop="10dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginTop="6dp"
-            android:textSize="16sp"
-            android:textColor="@color/colorText"
-            />
+            android:hint="Telefon"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-        <EditText
-            android:id="@+id/et_telefon"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_telefon"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:inputType="phone"
+                android:imeOptions="actionNext"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/til_parola"
+            android:layout_below="@+id/til_telefon"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_telefon"
-            android:singleLine="true"
-            android:textSize="20sp"
-            android:padding="6dp"
-            android:inputType="phone"
-            android:textColor="@color/colorText"
-            android:backgroundTint="@color/colorTextBold"
-            android:layout_marginBottom="10dp"
-            />
-
-        <TextView
-            android:id="@+id/tv_parola"
-            android:layout_below="@+id/et_telefon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Parolă"
-            android:textStyle="bold"
+            android:layout_height="56dp"
+            android:layout_marginTop="10dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginTop="6dp"
-            android:textSize="16sp"
-            android:textColor="@color/colorText"
-            />
+            android:hint="Parolă"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-        <EditText
-            android:id="@+id/et_parola"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_parola"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:inputType="textPassword"
+                android:imeOptions="actionNext"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/til_confirmare_parola"
+            android:layout_below="@+id/til_parola"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_parola"
-            android:singleLine="true"
-            android:textSize="20sp"
-            android:inputType="textPassword"
-            android:padding="6dp"
-            android:textColor="@color/colorText"
-            android:backgroundTint="@color/colorTextBold"
-            android:layout_marginBottom="10dp"
-            />
+            android:layout_height="56dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:hint="Confirmare parolă"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_confirmare_parola"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:layout_marginTop="6dp"
+                android:imeOptions="actionDone"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/btn_signin"
             android:layout_marginStart="90dp"
             android:layout_marginEnd="90dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/et_parola"
-            android:layout_marginTop="20dp"
+            android:layout_width="230dp"
+            android:layout_height="50dp"
+            android:layout_centerInParent="true"
+            android:textAlignment="center"
+            android:layout_below="@+id/til_confirmare_parola"
+            android:layout_marginTop="24dp"
             android:textSize="20sp"
             android:text="Înregistrare"
             android:padding="6dp"
