--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activities.AddEventActivity">
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="600dp">
 
     <include layout="@layout/toolbar_with_back_button"/>
 
@@ -19,7 +15,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:id="@+id/ll_eveniment">
 
@@ -68,7 +64,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_below="@+id/ll_eveniment_edit"
             android:id="@+id/ll_locatie">
@@ -157,27 +153,23 @@
             android:textStyle="bold"
             android:layout_marginTop="30dp" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_below="@+id/tv_pick_time"
-        android:layout_marginTop="90dp"
-        android:layout_height="wrap_content">
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/btn_add_event"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            app:fabSize="mini"
-            android:backgroundTint="@color/colorPrimary"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"
+            android:layout_gravity="bottom|end"
+            android:backgroundTint="@color/colorPurple"
+            app:borderWidth="0dp"
             android:src="@drawable/ic_add_white_24dp"
-            android:layout_margin="20dp"
-            android:layout_alignParentBottom="true"
+            app:fabSize="mini"
+            app:tint="@color/colorWhite"
             android:onClick="OnAddEvent"/>
-
-    </RelativeLayout>
-
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
     </RelativeLayout>
     </RelativeLayout>
-
-</androidx.core.widget.NestedScrollView>
