--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -59,17 +59,24 @@
             </RelativeLayout>
         </androidx.core.widget.NestedScrollView>
 
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/btn_add_post"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            app:fabSize="mini"
-            android:backgroundTint="@color/colorPrimary"
-            android:src="@drawable/ic_add_white_24dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="20dp"
-            android:layout_alignParentBottom="true"
+            android:layout_gravity="bottom|end"
+            android:backgroundTint="@color/colorPurple"
+            app:borderWidth="0dp"
+            android:src="@drawable/ic_add_white_24dp"
+            app:fabSize="mini"
+            app:tint="@color/colorWhite"
             android:onClick="OnAddEvent"/>
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
     </RelativeLayout>
 </LinearLayout>
