--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -75,16 +75,21 @@
         </RelativeLayout>
     </androidx.core.widget.NestedScrollView>
 
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:backgroundTint="@color/colorPrimary"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_gravity="bottom|end"
+        android:backgroundTint="@color/colorPurple"
+        app:borderWidth="0dp"
         android:src="@drawable/ic_add_white_24dp"
-        android:layout_margin="20dp"
         app:fabSize="mini"
+        app:tint="@color/colorWhite"
         android:onClick="onAddPost"
         />
-
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </RelativeLayout>
