--- a/app/src/main/res/layout/activity_year_group.xml
+++ b/app/src/main/res/layout/activity_year_group.xml
@@ -29,11 +29,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            app:fabSize="mini"
-            android:backgroundTint="@color/colorPrimary"
-            android:src="@drawable/ic_add_white_24dp"
-            android:layout_margin="20dp"
             android:layout_alignParentBottom="true"
+
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"
+            android:layout_gravity="end"
+            android:backgroundTint="@color/colorPurple"
+            app:borderWidth="0dp"
+            android:src="@drawable/ic_add_white_24dp"
+            app:fabSize="mini"
+            app:tint="@color/colorWhite"
             android:onClick="OnAddPost"/>
 
         <androidx.recyclerview.widget.RecyclerView
